--- a/app/src/main/res/values/styles_crop_rotation.xml
+++ b/app/src/main/res/values/styles_crop_rotation.xml
@@ -9,10 +9,20 @@
 
     <style name="PlacementStyle" parent="BedNameStyle">
         <item name="android:text" />
+        <item name="android:layout_marginEnd">@dimen/spacing_large</item>
+        <item name="android:textAlignment">viewEnd</item>
+    </style>
+
+    <style name="PlacementSmallStyle" parent="PlacementStyle">
+        <item name="android:textSize">@dimen/font_small</item>
     </style>
 
     <style name="CropRotationStyle" parent="BedNameStyle">
         <item name="android:text">@string/seasons_bed_without_plants</item>
+    </style>
+
+    <style name="CropRotationSmallStyle" parent="CropRotationStyle">
+        <item name="android:textSize">@dimen/font_small</item>
     </style>
 
     <style name="CropRotationGroupItemStyle">
