--- a/app/src/main/res/layout/fragment_choose_plant.xml
+++ b/app/src/main/res/layout/fragment_choose_plant.xml
@@ -19,7 +19,9 @@
         android:lines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:inputType="textCapWords"
+        android:autofillHints="" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/choose_plant_recycler_view"
