--- a/app/src/main/res/layout/fragment_garden_overview.xml
+++ b/app/src/main/res/layout/fragment_garden_overview.xml
@@ -12,6 +12,7 @@
         android:id="@+id/outdoors_button"
         android:src="@drawable/outdoors"
         android:scaleType="fitCenter"
+        android:contentDescription="@string/location_outdoors"
         android:adjustViewBounds="true"
         android:layout_height="@dimen/picture"
         android:layout_width="@dimen/picture"
@@ -35,6 +36,7 @@
         android:id="@+id/greenhouse_button"
         android:src="@drawable/greenhouse"
         android:scaleType="fitCenter"
+        android:contentDescription="@string/location_greenhouse"
         android:adjustViewBounds="true"
         android:layout_height="@dimen/picture"
         android:layout_width="@dimen/picture"
