--- a/app/src/main/res/drawable/planted.xml
+++ b/app/src/main/res/drawable/planted.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="32sp"
     android:height="32sp"
     android:viewportWidth="88"
@@ -25,5 +26,6 @@
         android:fillColor="@color/black"/>
     <path
         android:pathData="M53.7,52.3l-2.2-3.5c1.4-0.9,3.9-2.9,4.7-5.8c1-4-1.8-8-2-8.2c-0.3-0.4-0.8-0.5-1.3-0.3c-0.2,0.1-4.6,2.3-5.6,6.3  c-0.2,1-0.3,2-0.1,2.9c-0.7-0.5-1.6-0.9-2.5-1.1c-4-1-8,1.8-8.2,2c-0.4,0.3-0.5,0.8-0.3,1.3c0.1,0.2,2.3,4.6,6.3,5.6  c0.6,0.2,1.2,0.2,1.8,0.2c2.3,0,4.4-1,5.5-1.6l2.1,3.4c0,0,0,0,0,0c-4.3,3.2-5.5,9.3-2.6,14c1.5,2.4,3.8,4.1,6.6,4.7  c0.8,0.2,1.6,0.3,2.4,0.3c1.9,0,3.8-0.5,5.5-1.6c2.4-1.5,4.1-3.8,4.7-6.6c0.6-2.7,0.2-5.6-1.3-8C64.5,51.6,58.6,49.9,53.7,52.3  C53.7,52.3,53.7,52.3,53.7,52.3z M49.4,41.3c0.6-2.2,2.6-3.8,3.8-4.6c0.7,1.2,1.7,3.6,1.2,5.8c-0.6,2.2-2.6,3.8-3.8,4.6  C49.9,45.9,48.8,43.5,49.4,41.3z M43.1,49.4c-2.2-0.6-3.8-2.6-4.5-3.8c1.2-0.7,3.6-1.7,5.8-1.2c2.1,0.5,3.6,2.3,4.4,3.5l0.2,0.3  C47.7,48.9,45.3,50,43.1,49.4z M58.4,53.2c2.9,0,5.7,1.4,7.3,4c1.2,1.9,1.6,4.2,1.1,6.5c-0.5,2.2-1.9,4.1-3.8,5.3  c-1.9,1.2-4.2,1.6-6.5,1.1c-2.2-0.5-4.1-1.9-5.3-3.8c-2.5-4-1.2-9.3,2.8-11.8C55.3,53.6,56.9,53.2,58.4,53.2z"
-        android:fillColor="@color/black"/>
+        android:fillColor="@color/black"
+        tools:ignore="VectorPath" />
 </vector>
