--- a/app/src/main/res/layout/fragment_bed_overview.xml
+++ b/app/src/main/res/layout/fragment_bed_overview.xml
@@ -7,31 +7,9 @@
     <TextView
         android:layout_width="@dimen/text_view"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/plantable_explanation_image_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:fontFamily="@font/roboto"
-        android:textSize="@dimen/font_small"
-        android:id="@+id/plantable_explanation_text_view"
-        android:visibility="gone"
-        android:layout_marginStart="@dimen/spacing_small"/>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/plantable_explanation_text_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/plantable_explanation_image_view"
-        android:layout_marginTop="@dimen/spacing_small"
-        android:layout_marginStart="@dimen/spacing_small"/>
-
-    <TextView
-        android:layout_width="@dimen/text_view"
-        android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/water_explanation_image_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/plantable_explanation_text_view"
+        app:layout_constraintTop_toTopOf="parent"
         android:fontFamily="@font/roboto"
         android:textSize="@dimen/font_small"
         android:id="@+id/water_explanation_text_view"
@@ -43,8 +21,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toStartOf="@id/water_explanation_text_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/plantable_explanation_text_view"
+        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/water_explanation_image_view"
+        android:contentDescription="@string/water_explanation_image_view_content_description"
         android:layout_marginTop="@dimen/spacing_small"
         android:layout_marginStart="@dimen/spacing_small"/>
 
