--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -189,6 +189,10 @@
         <argument
             android:name="predicate"
             app:argType="dk.mifu.pmos.vegetablegardening.helpers.predicates.Predicate" />
+
+        <action
+            android:id="@+id/to_new_plant_dialog"
+            app:destination="@id/customPlantDialogFragment" />
     </dialog>
 
     <!-- Plant Details Dialog -->
